# Version-A1-Rapsberry-PI

./: .gitignore  CompilingWithCmake  Doxyfile  GuideForSettingUpWorkstation.txt  README.md  index.html  mint.cmake  optiplex.cmake  pi.cmake  ubuntu.cmake  usefulCommands
BioPi-New/: .cproject  .project  BioPi.files  README.dox  convertecgtoibi.h  datalogger.cpp  datalogger.h  datastream.h  deviceinterface.cpp  devicemanager.h  ecgcapture.cpp  ecgcapture.h  ecgstreamobject.h  homepagewidget.cpp  hrvanalysis.cpp  hrvanalysis.h  meanFilter.cpp  plottingwidget.h  res.qrc  samplingthread.cpp  settingssingleton.cpp  settingssingleton.h
BioPi-New/Deprecated Classes and Files/: ecgstream.cpp  ecgstream.h  ecgstream_fourchannels.cpp  ecgstream_fourchannels.h  ecgstruct4.h
BioPi-New/HRV/: abs.cpp  codeInfo.mat  cos.cpp  cos.h  diff.cpp  freqDomainHRV.h  freqDomainHRV_emxAPI.h  freqDomainHRV_emxutil.h  freqDomainHRV_initialize.cpp  freqDomainHRV_initialize.h  freqDomainHRV_terminate.cpp  freqDomainHRV_terminate.h  hist.cpp  hist.h  histc.h  linspace.cpp  linspace.h  locateOutliers.cpp  mean.h  median.cpp  median.h  mldivide.cpp  mldivide.h  power.h  preProcessIBI.cpp  preProcessIBI.h  preProcessIBI_emxutil.h  preProcessIBI_initialize.h  preProcessIBI_terminate.cpp  preProcessIBI_terminate.h  replaceOutliers.h  repmat.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rtw_proj.tmw  rtwtypes.h~HEAD  sin.cpp  (+6 more)
BioPi-New/PiFace-Interface/: CMakeLists.txt  abstractmenu.h  basemenu.h  bluetoothmenu.cpp  bluetoothmenu.h  ecgcapturemenu.cpp  main.cpp  settingsmenu.cpp  settingsmenu.h
BioPi-New/Tests/: CMakeLists.txt  devicemanager_test.cpp  ecgmock_test.cpp
BioPi-New/libFiles/: QRSDET.CPP  QRSDET2.CPP
Documentation/html/: 128HzTest_8txt.html  CMakeLists_8txt.html  CMakeLists_8txt_a89f03d735efb0191d6f4be258ed2e1da_cgraph.map  CMakeLists_8txt_a89f03d735efb0191d6f4be258ed2e1da_cgraph.md5  PiFace-Interface_2CMakeLists_8txt.html  PiFace-Interface_2main_8cpp.html  PiFace-Interface_2main_8cpp__incl.map  PiFace-Interface_2main_8cpp__incl.md5  PiFace-Interface_2main_8cpp_source.html  README_8dox.html  WorkingCMakeLists_8txt.html  abstractmenu_8cpp.html  abstractmenu_8cpp__incl.map  abstractmenu_8cpp__incl.md5  abstractmenu_8cpp_source.html  abstractmenu_8h.html  abstractmenu_8h__dep__incl.map  abstractmenu_8h__dep__incl.md5  abstractmenu_8h__incl.map  abstractmenu_8h__incl.md5  abstractmenu_8h_source.html  annotated.html  basemenu_8cpp.html  basemenu_8cpp__incl.map  basemenu_8cpp__incl.md5  basemenu_8cpp_source.html  basemenu_8h.html  basemenu_8h__dep__incl.map  basemenu_8h__dep__incl.md5  basemenu_8h__incl.map  basemenu_8h__incl.md5  basemenu_8h_source.html  bluetoothmenu_8cpp.html  bluetoothmenu_8cpp__incl.map  bluetoothmenu_8cpp__incl.md5  bluetoothmenu_8cpp_source.html  bluetoothmenu_8h.html  bluetoothmenu_8h__dep__incl.map  bluetoothmenu_8h__dep__incl.md5  bluetoothmenu_8h__incl.map  (+661 more)
Documentation/latex/: 128HzTest_8txt.tex  CMakeLists_8txt.tex  CMakeLists_8txt_a89f03d735efb0191d6f4be258ed2e1da_cgraph.md5  PiFace-Interface_2CMakeLists_8txt.tex  PiFace-Interface_2main_8cpp.tex  PiFace-Interface_2main_8cpp__incl.md5  PiFace-Interface_2main_8cpp_source.tex  README_8dox.tex  WorkingCMakeLists_8txt.tex  abstractmenu_8cpp.tex  abstractmenu_8cpp__incl.md5  abstractmenu_8cpp_source.tex  abstractmenu_8h.tex  abstractmenu_8h__dep__incl.md5  abstractmenu_8h__incl.md5  abstractmenu_8h_source.tex  annotated.tex  basemenu_8cpp.tex  basemenu_8cpp__incl.md5  basemenu_8cpp_source.tex  basemenu_8h.tex  basemenu_8h__dep__incl.md5  basemenu_8h__incl.md5  basemenu_8h_source.tex  bluetoothmenu_8cpp.tex  bluetoothmenu_8cpp__incl.md5  bluetoothmenu_8cpp_source.tex  bluetoothmenu_8h.tex  bluetoothmenu_8h__dep__incl.md5  bluetoothmenu_8h__incl.md5  bluetoothmenu_8h_source.tex  bug.tex  classAbstractMenu.tex  classAbstractMenu__inherit__graph.md5  classAbstractMenu_a4163c42d2127430e184612cb95211cda_icgraph.md5  classAbstractMenu_a5fd1c385e4acd825631ede5bb0424a5c_icgraph.md5  classAbstractMenu_aef49c4a4ceeb1aad12101cb4768e1596_icgraph.md5  classBaseMenu.tex  (+368 more)
Misc/: Building Qt 5 on Raspberry Pi.html  c++ - Installing Raspberry Pi Cross-Compiler - Stack Overflow.html
System Files/: README.md  aptGet.sh  aptGetWorkstation.sh  fixQualifiedLibraryPaths.sh  installQt5-5-WORKSTATION-ONLY.sh  installQt5-5-Workstation-And-RPI.sh
src/: 128HzTest  128HzTest.txt  BioPi-New.pro  CMakeLists.txt  CMakeLists.txt.user.eadef7e  Doxyfile  README.dox  WorkingCMakeLists.txt  convertecgtoibi.cpp  datastream.cpp  deviceinterface.h  devicemanager.cpp  ecgmock.cpp  ecgmock.h  ecgstreamobject.cpp  homepagewidget.h  hrvwidget.cpp  hrvwidget.h  loadbigfile.cpp  loadbigfile.h  main.cpp  mainwindow.cpp  mainwindow.h  meanFilter.h  plot.cpp  plot.h  plotandcapturewidget.cpp  plotandcapturewidget.h  plottingwidget.cpp  samplingthread.cpp  samplingthread.h  settingswidget.cpp  settingswidget.h  sliderwidget.cpp  sliderwidget.h
src/Deprecated Classes and Files/: EcgStruct4.cpp  datastreamobject.cpp  datastreamobject.h  model.cpp  model.h  saveastext.cpp  saveastext.h
src/HRV/: abs.h  buildInfo.mat  diff.h  freqDomainHRV.cpp  freqDomainHRV_types.h  histc.cpp  locateOutliers.h  mean.cpp  power.cpp  preProcessIBI_emxAPI.cpp  preProcessIBI_emxAPI.h  preProcessIBI_emxutil.cpp  preProcessIBI_initialize.cpp  preProcessIBI_types.h  replaceOutliers.cpp  repmat.h  rtGetInf.cpp  rt_nonfinite.h  rtwtypes.h  sin.h  std.cpp  std.h  sum.cpp  sum.h  timeDomainHRV.h  timeDomainHRV_emxAPI.cpp  timeDomainHRV_emxutil.h  timeDomainHRV_initialize.cpp  timeDomainHRV_initialize.h  timeDomainHRV_terminate.cpp  timeDomainHRV_terminate.h  timeDomainHRV_types.h  trapz.cpp  xgeqp3.cpp  xnrm2.cpp  xscal.cpp  xscal.h
src/PiFace-Interface/: CMakeLists.txt  abstractmenu.cpp  basemenu.cpp  ecgcapturemenu.h  pifacecontrolandview.cpp  pifacecontrolandview.h
src/Tests/: CMakeLists--.txt  convertecgtoibi_test.cpp  ecgmock_test.cpp  ecgstream_test.cpp  hrvanalysis_test.cpp
src/libFiles/: QRSDET.H  QRSFILT.CPP  bcm2835.h
(+112 files in other folders)
